create an api "FindTests"
