# docs/swagger.json
@@ -1,13 +1,58 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is an application web of interview assessment tests for interviewing out of the box .",
+        "description": "is an application web of interview assessment tests for interviewing out of the box .",
         "contact": {},
         "version": "1.0"
     },
     "basePath": "/api",
     "paths": {
         "/questions": {
+            "get": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
+                "description": "find a question by type or difficulty",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "question"
+                ],
+                "summary": "find a question",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "question search by type",
+                        "name": "type",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "question search by difficulty",
+                        "name": "difficulty",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Question"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/questions/edit": {
             "post": {
                 "security": [
                     {
